--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/pm": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/vue-3": "^2.12.0",
+    "@types/leaflet": "^1.9.20",
     "@vueuse/core": "10.11.1",
     "@vueuse/math": "10.11.1",
     "apexcharts": "3.54.1",
@@ -33,6 +34,7 @@
     "destr": "2.0.5",
     "eslint-plugin-regexp": "2.7.0",
     "jwt-decode": "4.0.0",
+    "leaflet": "^1.9.4",
     "mapbox-gl": "3.5.2",
     "ofetch": "1.4.1",
     "pinia": "3.0.2",
@@ -62,11 +64,11 @@
     "@fullcalendar/list": "6.1.17",
     "@fullcalendar/timegrid": "6.1.17",
     "@fullcalendar/vue3": "6.1.17",
+    "@iconify-json/fa": "1.2.1",
     "@iconify-json/mdi": "1.2.3",
+    "@iconify-json/tabler": "1.2.18",
     "@iconify/tools": "4.1.2",
     "@iconify/utils": "2.3.0",
-    "@iconify-json/fa": "1.2.1",
-    "@iconify-json/tabler": "1.2.18",
     "@iconify/vue": "4.1.2",
     "@intlify/unplugin-vue-i18n": "4.0.0",
     "@stylistic/stylelint-config": "1.0.1",
@@ -94,6 +96,7 @@
     "eslint-plugin-sonarjs": "0.24.0",
     "eslint-plugin-unicorn": "51.0.1",
     "eslint-plugin-vue": "9.33.0",
+    "laravel-vite-plugin": "1.2.0",
     "msw": "2.6.8",
     "postcss-html": "1.8.0",
     "postcss-scss": "4.0.9",
@@ -116,8 +119,7 @@
     "vite-plugin-vuetify": "2.0.3",
     "vite-svg-loader": "5.1.0",
     "vue-shepherd": "3.0.0",
-    "vue-tsc": "2.2.10",
-    "laravel-vite-plugin": "1.2.0"
+    "vue-tsc": "2.2.10"
   },
   "resolutions": {
     "postcss": "^8",
