--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@casl/vue": "2.2.2",
     "@floating-ui/dom": "1.6.8",
     "@formkit/drag-and-drop": "0.1.6",
+    "@gegeweb/leaflet-routing-machine-openroute": "^0.1.10",
     "@sindresorhus/is": "7.0.1",
     "@tiptap/extension-highlight": "^2.12.0",
     "@tiptap/extension-image": "^2.12.0",
@@ -35,6 +36,8 @@
     "eslint-plugin-regexp": "2.7.0",
     "jwt-decode": "4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "lrm-graphhopper": "^1.3.0",
     "mapbox-gl": "3.5.2",
     "ofetch": "1.4.1",
     "pinia": "3.0.2",
