Security: Remove hardcoded credentials and centralize config
- Remove all hardcoded IPs, passwords, CNPJs, and tokens from PHP code
- Move all sensitive values to .env via env() and config()
- Add validation for required config values in services
- Update configs to use env() without sensitive defaults
- Add OSRM, Python Flask, and mail configs to services.php
- Make database seeder credentials configurable via env
- Update .env.example with all new variables (no real values)
- Replace localhost:8002 references with API_BASE_URL in frontend
- Fix vite.config.ts HMR to use host: auto
- Improve VPO emission map with toll plaza coordinates
- Add NDD Cargo async result endpoint with enriched data

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=Laravel
+APP_NAME="NDD Vuexy"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8002
+ASSET_URL=http://localhost:8002
 
-APP_LOCALE=en
+APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -21,11 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_DATABASE=database/database.sqlite
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -38,9 +34,6 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
@@ -48,61 +41,95 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=log
-MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="ndd@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+MAIL_NOREPLY_ADDRESS=naoresponda@example.com
 
 VITE_APP_NAME="${APP_NAME}"
-VITE_API_BASE_URL=
-VITE_MAPBOX_ACCESS_TOKEN=
+VITE_API_BASE_URL=http://localhost:8002
 
-# NDD Cargo API Configuration
-# Integração para roteirizador e gestão de vale pedágio
+SANCTUM_STATEFUL_DOMAINS=localhost:8002,localhost:5175
+
+# ============================================================================
+# Progress OpenEdge Database (OBRIGATORIO - definir valores reais)
+# ============================================================================
+PROGRESS_CONNECTION=odbc
+PROGRESS_HOST=
+PROGRESS_DATABASE=
+PROGRESS_USERNAME=
+PROGRESS_PASSWORD=
+PROGRESS_PORT=13361
+PROGRESS_DSN=
+PROGRESS_JDBC_URL=
+PROGRESS_DRIVER_PATH=
+
+# ============================================================================
+# Google Maps API (Geocoding)
+# ============================================================================
+GOOGLE_MAPS_API_KEY=
+VITE_GOOGLE_MAPS_API_KEY="${GOOGLE_MAPS_API_KEY}"
+
+# Protecao de Quota Google Maps
+GOOGLE_MAPS_DAILY_LIMIT=1000
+GOOGLE_MAPS_MONTHLY_BUDGET=1.00
+GOOGLE_MAPS_PROTECTION_ENABLED=true
+
+# ============================================================================
+# SemParar SOAP API (OBRIGATORIO - definir valores reais)
+# ============================================================================
+SEMPARAR_WSDL_URL=https://app.viafacil.com.br/wsvp/ValePedagio?wsdl
+SEMPARAR_CNPJ=
+SEMPARAR_USER=
+SEMPARAR_PASSWORD=
+SEMPARAR_TIMEOUT=30
+ALLOW_SOAP_PURCHASE=false
+
+# ============================================================================
+# NDD Cargo API (OBRIGATORIO - definir valores reais)
 # @see docs/integracoes/ndd-cargo/README.md
-
-# Ambiente: homologacao ou producao
+# ============================================================================
 NDD_CARGO_ENVIRONMENT=homologacao
+NDD_CARGO_CNPJ=
+NDD_CARGO_TOKEN=
+NDD_CARGO_PT_EMISSOR=
 
-# Endpoint SOAP (opcional, usa environment se não definido)
-# NDD_CARGO_ENDPOINT_URL=https://homologa.nddcargo.com.br/wsagente/ExchangeMessage.asmx
-
-# Credenciais (fornecidas pela NDD Cargo)
-NDD_CARGO_CNPJ=17359233000188
-NDD_CARGO_TOKEN=2342bbkjkh23423bn2j3n42a
-
-# Certificado Digital A1 (ICP-Brasil)
-# Tipo: pfx (arquivo .pfx) ou pem (arquivos .pem separados)
+# Certificado Digital NDD Cargo
 NDD_CARGO_CERT_TYPE=pfx
-NDD_CARGO_CERT_PFX_PATH=storage/certificates/nddcargo/cert.pfx
-NDD_CARGO_CERT_CERT_PATH=storage/certificates/nddcargo/cert_cert.pem
-NDD_CARGO_CERT_KEY_PATH=storage/certificates/nddcargo/cert_key.pem
+# NDD_CARGO_CERT_PFX_PATH usa o padrao do config (storage_path)
 NDD_CARGO_CERT_PASSWORD=
 
-# Versão da API (layout XML)
+# Configuracoes Adicionais NDD Cargo
 NDD_CARGO_VERSAO_LAYOUT=4.2.12.0
-
-# Timeout em segundos para requisições SOAP
 NDD_CARGO_TIMEOUT=60
-
-# Cache de rotas (em segundos, 24h = 86400)
 NDD_CARGO_CACHE_ENABLED=true
 NDD_CARGO_CACHE_ROTAS_TTL=86400
-
-# Logging
 NDD_CARGO_LOG_XML=false
 NDD_CARGO_LOG_RESPONSES=true
 NDD_CARGO_LOG_LEVEL=info
-
-# Rate Limiting (requisições por minuto)
 NDD_CARGO_RATE_LIMIT=60
 NDD_CARGO_TEST_RATE_LIMIT=10
+
+# ============================================================================
+# Python Flask Service (PDF + WhatsApp) - opcional
+# ============================================================================
+PYTHON_FLASK_URL=http://localhost:5001
+PYTHON_FLASK_TIMEOUT=30
+
+# ============================================================================
+# OSRM Routing (servidores publicos gratuitos - opcional configurar)
+# ============================================================================
+# OSRM_SERVER_PRIMARY=https://router.project-osrm.org
+# OSRM_SERVER_SECONDARY=https://routing.openstreetmap.de/routed-car
+# OSRM_TIMEOUT=15
+
+# ============================================================================
+# Database Seeder (opcional - usuarios de desenvolvimento)
+# ============================================================================
+# SEED_ADMIN_EMAIL=admin@ndd.com
+# SEED_ADMIN_PASSWORD=Admin@123
+# SEED_USER_EMAIL=user@ndd.com
+# SEED_USER_PASSWORD=User@123
