--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,25 @@ APP_NAME="NDD Vuexy"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+
+# ============================================================================
+# URL Configuration
+# ============================================================================
+# Para desenvolvimento local:
+#   APP_URL=http://localhost:8002
+#   ASSET_URL=
+#
+# Para producao em subdiretorio (ex: /valepedagio):
+#   APP_URL=http://SEU_IP/valepedagio
+#   ASSET_URL=/valepedagio
+#   VITE_BASE_URL=/valepedagio/
+# ============================================================================
 APP_URL=http://localhost:8002
-ASSET_URL=http://localhost:8002
+ASSET_URL=
+
+# Vite base URL para build em subdiretorio (deixar vazio para desenvolvimento)
+# Deve terminar com / quando definido (ex: /valepedagio/)
+VITE_BASE_URL=
 
 APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
@@ -50,8 +67,8 @@ MAIL_FROM_NAME="${APP_NAME}"
 MAIL_NOREPLY_ADDRESS=naoresponda@example.com
 
 VITE_APP_NAME="${APP_NAME}"
-VITE_API_BASE_URL=http://localhost:8002
 
+# Para producao, sera detectado automaticamente via window.location
 SANCTUM_STATEFUL_DOMAINS=localhost:8002,localhost:5175
 
 # ============================================================================
