--- a/.env.example
+++ b/.env.example
@@ -13,14 +13,12 @@ APP_DEBUG=true
 # Para producao em subdiretorio (ex: /valepedagio):
 #   APP_URL=http://SEU_IP/valepedagio
 #   ASSET_URL=/valepedagio
-#   VITE_BASE_URL=/valepedagio/
+#
+# IMPORTANTE: O laravel-vite-plugin usa ASSET_URL automaticamente para
+# configurar os paths dos assets. NAO precisa de VITE_BASE_URL separado.
 # ============================================================================
 APP_URL=http://localhost:8002
 ASSET_URL=
-
-# Vite base URL para build em subdiretorio (deixar vazio para desenvolvimento)
-# Deve terminar com / quando definido (ex: /valepedagio/)
-VITE_BASE_URL=
 
 APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
