Fix: Revert api.ts to use VITE_API_BASE_URL properly
For subdirectory deployment, add VITE_API_BASE_URL=/valepedagio/api to .env

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,7 @@ APP_DEBUG=true
 # Para producao em subdiretorio (ex: /valepedagio):
 #   APP_URL=http://SEU_IP/valepedagio
 #   ASSET_URL=/valepedagio
-#
-# IMPORTANTE: O laravel-vite-plugin usa ASSET_URL automaticamente para
-# configurar os paths dos assets. NAO precisa de VITE_BASE_URL separado.
+#   VITE_API_BASE_URL=/valepedagio/api
 # ============================================================================
 APP_URL=http://localhost:8002
 ASSET_URL=
