Fix: Suporte a deploy em subdiretorio via Apache Alias
- Adicionar RewriteBase no .htaccess para strip do prefixo
- Corrigir hardcoded URLs usando Vue Router em vez de window.location
- Atualizar .env.example com documentacao de configuracao
- Mudar VITE_API_BASE_URL para /api (RewriteBase cuida do prefixo)

--- a/.env.example
+++ b/.env.example
@@ -6,17 +6,23 @@ APP_DEBUG=true
 # ============================================================================
 # URL Configuration
 # ============================================================================
-# Para desenvolvimento local:
+# Para desenvolvimento local (php artisan serve + pnpm dev):
 #   APP_URL=http://localhost:8002
 #   ASSET_URL=
+#   VITE_API_BASE_URL=/api
+#   SESSION_PATH=/
 #
-# Para producao em subdiretorio (ex: /valepedagio):
+# Para producao em subdiretorio via Apache Alias (ex: /valepedagio):
 #   APP_URL=http://SEU_IP/valepedagio
 #   ASSET_URL=/valepedagio
-#   VITE_API_BASE_URL=/valepedagio/api
+#   VITE_API_BASE_URL=/api
+#   SESSION_PATH=/valepedagio
+#
+# IMPORTANTE: No servidor, tambem descomentar RewriteBase no public/.htaccess!
 # ============================================================================
 APP_URL=http://localhost:8002
 ASSET_URL=
+VITE_API_BASE_URL=/api
 
 APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
