Fix: Support Apache Alias subdirectory deployment (/valepedagio)
- Replace hardcoded '/' paths with named routes in guards.ts
- Fix API URL duplication in VpoStep4Rota.vue using getApiUrl()
- Update login page detection for subdirectory support in api.ts
- Fix cookie path to use dynamic base path in useCookie.ts
- Add getApiUrl() helper for subdirectory-aware API calls
- Replace window.location.origin with getApiUrl() in multiple components
- Update .env.example documentation with correct VITE_API_BASE_URL
- Use named routes instead of hardcoded paths throughout navigation

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ APP_DEBUG=true
 # Para producao em subdiretorio via Apache Alias (ex: /valepedagio):
 #   APP_URL=http://SEU_IP/valepedagio
 #   ASSET_URL=/valepedagio
-#   VITE_API_BASE_URL=/api
+#   VITE_API_BASE_URL=/valepedagio/api   <-- IMPORTANTE: Incluir o subdiretorio!
 #   SESSION_PATH=/valepedagio
 #
 # IMPORTANTE: No servidor, tambem descomentar RewriteBase no public/.htaccess!
