--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,13 @@ APP_DEBUG=true
 #   VITE_API_BASE_URL=/api
 #   SESSION_PATH=/
 #
+# Para Laravel Herd (ex: valepedagio.test):
+#   APP_URL=http://valepedagio.test
+#   ASSET_URL=http://valepedagio.test
+#   VITE_API_BASE_URL=http://valepedagio.test/api   <-- IMPORTANTE: URL completa com /api!
+#   SANCTUM_STATEFUL_DOMAINS=valepedagio.test,localhost:5175
+#   SESSION_PATH=/
+#
 # Para producao em subdiretorio via Apache Alias (ex: /valepedagio):
 #   APP_URL=http://SEU_IP/valepedagio
 #   ASSET_URL=/valepedagio
