--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-regexp": "2.7.0",
     "jwt-decode": "4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-graphhopper": "^1.3.0",
     "mapbox-gl": "3.5.2",
