--- a/.env.example
+++ b/.env.example
@@ -58,14 +58,26 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# ============================================================================
+# Email Configuration
+# ============================================================================
+# Desenvolvimento (log - nao envia email real):
+#   MAIL_MAILER=log
+#
+# Producao (SMTP):
+#   MAIL_MAILER=smtp
+#   MAIL_HOST=webmail.tambasa.com.br
+#   MAIL_PORT=587
+#   MAIL_ENCRYPTION=tls
+# ============================================================================
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_PORT=587
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="ndd@example.com"
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="naoresponda@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
-MAIL_NOREPLY_ADDRESS=naoresponda@example.com
 
 VITE_APP_NAME="${APP_NAME}"
 
